<resources>
    <string name="app_name">Third</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="make_login">Login</string>
    <string name="your_login">Your login:</string>
    <string name="your_password">Your password:</string>
    <string name="init_login">login</string>
    <string name="init_pass">pass</string>
    <string name="back">Logout</string>
</resources>
